# kaktusat

./: .bazelrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WORKSPACE
benchmark/: BUILD  CMakeLists.txt  batch.cpp
demo/: BUILD  CMakeLists.txt  factor.cpp  life.cpp  sudoku.cpp  taocp_7.2.2.2-44.cpp
demo/exercises/: 7.2.2.2-44.cpp  BUILD
main/: BUILD  CMakeLists.txt  main.cpp
repl/: BUILD  CMakeLists.txt  cmd.cpp  cmd.h  cmd_eval.cpp  context.cpp  context.h  expr.cpp  expr.h  expr_collect_bindings.cpp  expr_copy.cpp  expr_eval.cpp  expr_tosolver.cpp  expr_tostring.cpp  parsing.h  repl.cpp  result.h  token.cpp  token.h  trie.h
solver/: BUILD  CMakeLists.txt  solver.cpp  solver.h
solver/algorithm/: A.cpp  A.h  A2.cpp  A2.h  B.cpp  B.h  BUILD  CMakeLists.txt  Z.cpp  Z.h  a.cpp  a.h  a2.cpp  a2.h  algorithm.h  analyze.cpp  analyze.h  b.cpp  b.h  c.cpp  c.h  d.cpp  d.h  i0.cpp  i0.h  nop.cpp  nop.h  z.cpp  z.h
solver/builder/: BUILD  builder.h  cardinality.cpp  cardinality.h  circuit.cpp  circuit.h  coloring.cpp  coloring.h  dimacs.cpp  dimacs.h  factor.cpp  factor.h  langford.cpp  langford.h  mutilated_chessboard.cpp  mutilated_chessboard.h  partial_order.cpp  partial_order.h  pigeonhole.cpp  pigeonhole.h  rand.cpp  rand.h  simple.cpp  simple.h  waerden.cpp  waerden.h
solver/encoder/: BUILD  CMakeLists.txt  anti_maximal_element.cpp  anti_maximal_element.h  cardinality.h  (+33 more)
test/: BUILD  builder_test.cpp  encoder_test.cpp  simple.cpp  solver.cpp  solver_test.cpp  stress.cpp  transform_test.cpp
util/: BUILD  CMakeLists.txt  check.h  log.cpp  log.h
(+23 files in other folders)
